--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,8 @@
 
 header {
   background: url(./img/head.png);
+  background-repeat: no-repeat;
+  background-size: cover;
   width: 100vw;
   height: 1000px;
 }
@@ -165,6 +167,12 @@ height: 375px;
 background-color: #ffffff;
 display: flex;
 flex-wrap: wrap;
+gap: 50px;
+}
+
+.new .column1{
+  display: flex;
+  flex-direction: row;
 }
 .new .column1 .circle1{
   width: 31px;
@@ -172,7 +180,10 @@ height: 31px;
 border-radius: 15px;
 background-color: #2a3b40;
 }
-
+.new .column2{
+  display: flex;
+  flex-direction: row;
+}
 .new .column2 .circle1{
   width: 31px;
   height: 31px;
@@ -186,10 +197,11 @@ background-color: #2a3b40;
   border-radius: 15px;
   background-color: #2a3b40;
 }
-
+.new .column3{
+  display: flex;
+  flex-direction: row;
+}
 .new .column3 .circle1{
-  display: inline-block;
-
   width: 31px;
   height: 31px;
   border-radius: 15px;
@@ -197,7 +209,6 @@ background-color: #2a3b40;
 }
 
 .new .column3 .circle2{
-  display: inline-block;
   width: 31px;
   height: 31px;
   border-radius: 15px;
@@ -205,7 +216,6 @@ background-color: #2a3b40;
 }
 
 .new .column3 .circle3{
-  display: inline-block;
   width: 31px;
   height: 31px;
   border-radius: 15px;
